--- a/Node_js/password_manager/package.json
+++ b/Node_js/password_manager/package.json
@@ -9,6 +9,7 @@
   "author": "caleb",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^3.1.5",
     "node-persist": "0.0.6",
     "yargs": "^3.15.0"
   }
